--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 .game-screen {
     position: relative;
     outline: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .fancy-text {
@@ -55,4 +58,31 @@
 .sprite-small {
     width: 32px;
     height: 32px;
+}
+
+.sprite-centered {
+    transform: translate(-50%, -50%);
+}
+
+.status-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+    width: 500px;
+}
+
+.coin-status {
+    display: flex;
+    align-items: center;
+}
+
+.coin-text {
+    font-weight: bold;
+    font-size: 1.2em;
+    padding-left: 0.5em;
+}
+
+.health-status {
+    text-align: right;
 }
