--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,17 @@
+body {
+    background-image: url('../resources/background.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
+
 .game-screen {
     position: relative;
     outline: none;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 30px;
 }
 
 .fancy-text {
